fixed alignment (hopefully)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,12 +2,20 @@ body {
     background-color: #dfe4e0;
 }
 
-body{
+body {
     margin:40px auto;
     max-width:350px;
     font-size:18px;
     color:#444;
     padding:0 10px;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+html {
+    height: 40%;
+    display: table;
+    margin: auto;
 }
 
 h1, h2, h3, h4, h5, h6, p {
